Merge of the rtver branch. Support for versioning of the whole runtime state.
git-svn-id: https://svn.eu.apache.org/repos/asf/ode/trunk@690420 13f79535-47bb-0310-9956-ffa450edef68